--- a/back-end proyecto/task/task/src/main/resources/application.properties
+++ b/back-end proyecto/task/task/src/main/resources/application.properties
@@ -8,8 +8,8 @@ server.port=8080
 # CONEXIÓN A POSTGRESQL
 # ===============================
 spring.datasource.url=jdbc:postgresql://localhost:5432/galaxy_tasks_db
-spring.datasource.username=***
-spring.datasource.password=***
+spring.datasource.username=prostgres
+spring.datasource.password=prostgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 
